--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -42,7 +42,7 @@
             android:value="AIzaSyCfY-wTZzgNYX_yZLgI_IKpx0Ot6t6p3M0" />
 
         <activity
-            android:name=".MapActivity"
+            android:name="com.ariisens.nearsens.map.MapActivity"
             android:label="@string/title_activity_map" >
         </activity>
     </application>
