--- a/project.properties
+++ b/project.properties
@@ -1,7 +1,8 @@
 #This project.properties file is being managed by Fabric.
 #Manifest merger has been enabled to pull in kit resources.
-#Wed Jun 17 22:19:49 CEST 2015
+#Wed Jun 24 21:20:01 CEST 2015
 manifestmerger.enabled=true
+android.library.reference.3=kit-libs/com-crashlytics-sdk-android_crashlytics
 target=android-19
-android.library.reference.2=kit-libs/com-crashlytics-sdk-android_crashlytics
-android.library.reference.1=../../../../../../SDK/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.2=kit-libs\\com-crashlytics-sdk-android_crashlytics
+android.library.reference.1=..\\..\\..\\..\\..\\..\\SDK\\sdk\\extras\\google\\google_play_services\\libproject\\google-play-services_lib
