--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,7 @@
         
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
+        android:name="com.ariisens.nearsens.MyMainApplication"
         android:label="@string/app_name"
         android:theme="@style/Theme.TranslucentActionBar" >
         <meta-data
@@ -55,6 +56,12 @@
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="d7a20eb518ddebcc12043646ea585e785fbbe12e" />
+        
+        <provider
+            android:name="com.ariisens.nearsens.database.MyContentProvider"
+            android:authorities="com.ariisens.nearsens.database"
+            android:exported="false" >
+        </provider>
     </application>
 
 </manifest>
