--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <uses-sdk
         android:minSdkVersion="16"
-        android:targetSdkVersion="16" />
+        android:targetSdkVersion="22" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -19,12 +19,11 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        
+        android:name="com.ariisens.nearsens.MyMainApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:name="com.ariisens.nearsens.MyMainApplication"
         android:label="@string/app_name"
-        android:theme="@style/Theme.TranslucentActionBar" >
+        android:theme="@style/AppTheme" >
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -46,17 +45,16 @@
         <activity
             android:name="com.ariisens.nearsens.map.MapActivity"
             android:label="@string/title_activity_map" >
-            
         </activity>
         <activity
             android:name="com.ariisens.nearsens.offerdetails.OfferDetailsActivity"
-            android:theme="@style/Theme.TranslucentActionBar.ActionBar.Overlay"
             android:label="Offers" >
         </activity>
+
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="d7a20eb518ddebcc12043646ea585e785fbbe12e" />
-        
+
         <provider
             android:name="com.ariisens.nearsens.database.MyContentProvider"
             android:authorities="com.ariisens.nearsens.database"
