--- a/project.properties
+++ b/project.properties
@@ -1,6 +1,9 @@
 #This project.properties file is being managed by Fabric.
 #Manifest merger has been enabled to pull in kit resources.
-#Fri Jun 26 13:58:55 CEST 2015
+#Wed Jul 01 17:29:38 CEST 2015
 manifestmerger.enabled=true
+android.library.reference.4=../../../../../../SDK/sdk/extras/android/support/v7/appcompat
+android.library.reference.3=kit-libs\\com-crashlytics-sdk-android_crashlytics
 target=android-22
-android.library.reference.1=../google-play-services_lib
+android.library.reference.2=..\\..\\..\\..\\..\\..\\SDK\\sdk\\extras\\google\\google_play_services\\libproject\\google-play-services_lib
+android.library.reference.1=..\\..\\..\\..\\..\\..\\SDK\\sdk\\extras\\android\\support\\design
