--- a/project.properties
+++ b/project.properties
@@ -1,7 +1,8 @@
 #This project.properties file is being managed by Fabric.
 #Manifest merger has been enabled to pull in kit resources.
-#Wed Jul 01 17:29:38 CEST 2015
+#Wed Jul 01 20:36:26 CEST 2015
 manifestmerger.enabled=true
+android.library.reference.5=kit-libs/com-crashlytics-sdk-android_crashlytics
 android.library.reference.4=../../../../../../SDK/sdk/extras/android/support/v7/appcompat
 android.library.reference.3=kit-libs\\com-crashlytics-sdk-android_crashlytics
 target=android-22
